<resources>
    <string name="app_name">ChiliDoc</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_account">Account</string>
    <string name="slogan">ChiliDoc: Secure Your Chili</string>
    <string name="description">Kami adalah asisten Anda untuk memudahkan analisa penyakit pada tanaman cabai.</string>
    <string name="create_account">Daftar</string>
    <string name="login">Masuk</string>
    <string name="fullname">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_account">Sudah punya akun? Masuk</string>
    <string name="not_have_account">Belum punya akun? Daftar</string>
    <string name="confirm_password">Konfirmasi password</string>
    <string name="welcome">Selamat datang</string>
    <string name="article">Artikel</string>
    <string name="title">Judul</string>
    <string name="logout">Keluar</string>
    <string name="image_classifier_failed">Gambar gagal klasifikasi</string>
    <string name="analyze">Analisa</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="no_image">Pilih gambar terlebih dahulu</string>
    <string name="profile">Profil</string>
    <string name="Phone">No. HP</string>
    <string name="Address">Alamat</string>
    <string name="history">Riwayat</string>
    <string name="prediction">Prediksi</string>
    <string name="result">Hasil</string>
    <string name="disease">Penyakit</string>
    <string name="prevent">Mencegah</string>
    <string name="treatment">Mengatasi</string>
    <string name="save">Simpan Hasil</string>
    <string name="next">Lanjut</string>
</resources>